Se agregan imagenes

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 <div class="specialty-showcase">
                     <div class="specialty-item featured">
                         <div class="specialty-image">
-                            <div class="image-placeholder">
-                                📷 Foto de Merengones
+                            <div class="hero-gallery">
+                               <img src="/imagenes/Merengones.jpg" alt="Producto 1">
                             </div>
                         </div>
                         <div class="specialty-content">
@@ -147,24 +147,72 @@
                         <h3>🍰 Postres y Dulces</h3>
                         <div class="product-grid">
                             <div class="product-card">
-                                <div class="product-image">
-                                    <div class="image-placeholder">📷 Tortas</div>
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/Torta.jpg" alt="Producto 1">
                                 </div>
                                 <h4>🎂 Tortas Personalizadas</h4>
                                 <p>Tortas hechas a medida para tus celebraciones especiales</p>
                                 <div class="product-price">Desde $25.000</div>
                             </div>
                             <div class="product-card">
-                                <div class="product-image">
-                                    <div class="image-placeholder">📷 Cupcakes</div>
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/Galletas.jpg" alt="Producto 1">
                                 </div>
-                                <h4>🧁 Cupcakes Decorados</h4>
-                                <p>Perfectos para fiestas y eventos, con decoraciones únicas</p>
-                                <div class="product-price">$3.500 c/u</div>
+                                <h4>🍪 Galletas Artesanales</h4>
+                                <p>Crujientes galletas con sabores tradicionales y modernos</p>
+                                <div class="product-price">$2.000 c/u</div>
                             </div>
                             <div class="product-card">
-                                <div class="product-image">
-                                    <div class="image-placeholder">📷 Galletas</div>
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/Arandano.jpg" alt="Producto 1">
+                                </div>
+                                <h4>🍪 Galletas Artesanales</h4>
+                                <p>Crujientes galletas con sabores tradicionales y modernos</p>
+                                <div class="product-price">$2.000 c/u</div>
+                            </div>
+                            <div class="product-card">
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/Chicle.jpg" alt="Producto 1">
+                                </div>
+                                <h4>🍪 Galletas Artesanales</h4>
+                                <p>Crujientes galletas con sabores tradicionales y modernos</p>
+                                <div class="product-price">$2.000 c/u</div>
+                            </div>
+                            <div class="product-card">
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/Durazno.jpg" alt="Producto 1">
+                                </div>
+                                <h4>🍪 Galletas Artesanales</h4>
+                                <p>Crujientes galletas con sabores tradicionales y modernos</p>
+                                <div class="product-price">$2.000 c/u</div>
+                            </div>
+                            <div class="product-card">
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/Kiwi.jpg" alt="Producto 1">
+                                </div>
+                                <h4>🍪 Galletas Artesanales</h4>
+                                <p>Crujientes galletas con sabores tradicionales y modernos</p>
+                                <div class="product-price">$2.000 c/u</div>
+                            </div>
+                            <div class="product-card">
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/Maracuya.jpg" alt="Producto 1">
+                                </div>
+                                <h4>🍪 Galletas Artesanales</h4>
+                                <p>Crujientes galletas con sabores tradicionales y modernos</p>
+                                <div class="product-price">$2.000 c/u</div>
+                            </div>
+                            <div class="product-card">
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/Pgalleta.jpg" alt="Producto 1">
+                                </div>
+                                <h4>🍪 Galletas Artesanales</h4>
+                                <p>Crujientes galletas con sabores tradicionales y modernos</p>
+                                <div class="product-price">$2.000 c/u</div>
+                            </div>
+                            <div class="product-card">
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/Chocorramo.jpg" alt="Producto 1">
                                 </div>
                                 <h4>🍪 Galletas Artesanales</h4>
                                 <p>Crujientes galletas con sabores tradicionales y modernos</p>
