se agregan imagenes

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                         <div class="hero-gallery">
                             <img src="/imagenes/Imagen1.jpg" alt="Producto 1">
                             <img src="/imagenes/Imagen2.jpg" alt="Producto 2">
+                            <img src="/imagenes/Imagen3.jpg" alt="Producto 2">
+                            <img src="/imagenes/Imagen5.jpg" alt="Producto 2">
+                            <img src="/imagenes/Imagen6.jpg" alt="Producto 2">
                         </div>
                     </div>
                 </div>
@@ -84,7 +87,7 @@
                     <div class="specialty-item featured">
                         <div class="specialty-image">
                             <div class="hero-gallery">
-                                <img src="/imagenes/Merengones.jpg" alt="Producto 1">
+                                <img src="/imagenes/Merengon.jpg" alt="Producto 1">
                             </div>
                         </div>
                         <div class="specialty-content">
@@ -101,8 +104,8 @@
 
                     <div class="specialty-item">
                         <div class="specialty-image">
-                            <div class="image-placeholder">
-                                📷 Foto de Obleas
+                            <div class="hero-gallery">
+                                <img src="/imagenes/Oblea.jpg" alt="Producto 2">
                             </div>
                         </div>
                         <div class="specialty-content">
@@ -120,22 +123,22 @@
 
                 <div class="specialty-grid">
                     <div class="specialty-card">
-                        <div class="card-image">
-                            <div class="image-placeholder small">📷 Café</div>
+                        <div class="hero-gallery">
+                            <img src="/imagenes/Americano.jpg" alt="Producto 2">
                         </div>
                         <h4>☕ Café Premium</h4>
                         <p>Café colombiano de alta calidad para acompañar perfectamente nuestros dulces.</p>
                     </div>
                     <div class="specialty-card">
-                        <div class="card-image">
-                            <div class="image-placeholder small">📷 Chocolate</div>
+                        <div class="hero-gallery">
+                            <img src="/imagenes/AromaticaHiervas.jpg" alt="Producto 2">
                         </div>
                         <h4>🍫 Chocolate Caliente</h4>
                         <p>Cremoso chocolate caliente preparado con cacao puro y amor.</p>
                     </div>
                     <div class="specialty-card">
-                        <div class="card-image">
-                            <div class="image-placeholder small">📷 Bebidas</div>
+                        <div class="hero-gallery">
+                            <img src="/imagenes/AromaticaAmarillos.jpg" alt="Producto 2">
                         </div>
                         <h4>🥤 Bebidas Artesanales</h4>
                         <p>Jugos naturales y bebidas refrescantes preparadas al momento.</p>
@@ -225,6 +228,42 @@
                                 <p>Crujientes galletas con sabores tradicionales y modernos</p>
                                 <div class="product-price">$2.000 c/u</div>
                             </div>
+
+                            <div class="product-card">
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/DuraznoGalleta.jpg" alt="Producto 1">
+                                </div>
+                                <h4>🍪 Galletas Artesanales</h4>
+                                <p>Crujientes galletas con sabores tradicionales y modernos</p>
+                                <div class="product-price">$2.000 c/u</div>
+                            </div>
+
+                            <div class="product-card">
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/Frutos rojos.jpg" alt="Producto 1">
+                                </div>
+                                <h4>🍪 Galletas Artesanales</h4>
+                                <p>Crujientes galletas con sabores tradicionales y modernos</p>
+                                <div class="product-price">$2.000 c/u</div>
+                            </div>
+
+                            <div class="product-card">
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/Canastilla.jpg" alt="Producto 1">
+                                </div>
+                                <h4>🍪 Galletas Artesanales</h4>
+                                <p>Crujientes galletas con sabores tradicionales y modernos</p>
+                                <div class="product-price">$2.000 c/u</div>
+                            </div>
+
+                            <div class="product-card">
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/Oblea.jpg" alt="Producto 1">
+                                </div>
+                                <h4>🍪 Galletas Artesanales</h4>
+                                <p>Crujientes galletas con sabores tradicionales y modernos</p>
+                                <div class="product-price">$2.000 c/u</div>
+                            </div>
                         </div>
                     </div>
 
@@ -232,24 +271,24 @@
                         <h3>☕ Bebidas y Acompañantes</h3>
                         <div class="product-grid">
                             <div class="product-card">
-                                <div class="product-image">
-                                    <div class="image-placeholder">📷 Café</div>
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/Americano.jpg" alt="Producto 2">
                                 </div>
                                 <h4>☕ Café Gourmet</h4>
                                 <p>Café colombiano premium en diferentes preparaciones</p>
                                 <div class="product-price">$4.000 - $8.000</div>
                             </div>
                             <div class="product-card">
-                                <div class="product-image">
-                                    <div class="image-placeholder">📷 Jugos</div>
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/AromaticaAmarillos.jpg" alt="Producto 2">
                                 </div>
                                 <h4>🥤 Jugos Naturales</h4>
                                 <p>Jugos frescos de frutas de temporada</p>
                                 <div class="product-price">$5.000 - $7.000</div>
                             </div>
                             <div class="product-card">
-                                <div class="product-image">
-                                    <div class="image-placeholder">📷 Batidos</div>
+                                <div class="hero-gallery">
+                                    <img src="/imagenes/AromaticaHiervas.jpg" alt="Producto 2">
                                 </div>
                                 <h4>🥛 Batidos Especiales</h4>
                                 <p>Cremosos batidos con frutas y complementos</p>
@@ -270,7 +309,6 @@
                 <div class="gallery-tabs">
                     <button class="tab-btn active" onclick="showGalleryTab('productos-fotos')">Productos</button>
                     <button class="tab-btn" onclick="showGalleryTab('local-fotos')">Nuestro Local</button>
-                    <button class="tab-btn" onclick="showGalleryTab('eventos-fotos')">Eventos</button>
                 </div>
 
                 <div class="gallery-container">
@@ -323,27 +361,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <div id="eventos-fotos" class="gallery-tab">
-                        <div class="gallery-grid">
-                            <div class="gallery-item">
-                                <div class="image-placeholder gallery">📷 Boda Especial</div>
-                                <p>Mesa de postres para boda</p>
-                            </div>
-                            <div class="gallery-item">
-                                <div class="image-placeholder gallery">📷 Cumpleaños Infantil</div>
-                                <p>Celebración con nuestros productos</p>
-                            </div>
-                            <div class="gallery-item">
-                                <div class="image-placeholder gallery">📷 Graduación</div>
-                                <p>Torta personalizada de graduación</p>
-                            </div>
-                            <div class="gallery-item">
-                                <div class="image-placeholder gallery">📷 Evento Corporativo</div>
-                                <p>Catering para empresa</p>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </section>
 
@@ -365,8 +382,8 @@
                                 encuentro favorito de la comunidad, donde cada cliente se siente como en casa y cada
                                 producto se elabora con el mismo cariño de siempre.</p>
                         </div>
-                        <div class="story-image">
-                            <div class="image-placeholder">📷 Foto de Rosita</div>
+                        <div class="hero-gallery">
+                            <img src="/imagenes/Imagen4.jpg" alt="Producto 2">
                         </div>
                     </div>
                 </div>
@@ -430,8 +447,11 @@
                             <div class="contact-icon">📍</div>
                             <div class="contact-details">
                                 <h4>Dirección</h4>
-                                <p>Calle Principal #123<br>Iza, Boyaca</p>
-                                <div class="image-placeholder contact">📷 Mapa de Ubicación</div>
+                                <p>Calle Principal #123<br>Iza, Boyacá</p>
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!4v1757896092240!6m8!1m7!1slrhOuX3m8i3GA2w3C_qAPQ!2m2!1d5.612086058800706!2d-72.97993464165211!3f280.05874288558545!4f-0.31358114675091997!5f0.7820865974627469"
+                                    width="350" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
                         </div>
 
@@ -482,8 +502,8 @@
                             </a>
                         </div>
 
-                        <div class="location-image">
-                            <div class="image-placeholder">📷 Foto del Local</div>
+                        <div class="hero-gallery">
+                            <img src="/imagenes/Imagen7.jpg" alt="Producto 2">
                         </div>
                     </div>
                 </div>
