se agregan imagenes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="specialty-showcase">
-                    <div class="specialty-item featured">
+                    <div class="specialty-card">
                         <div class="specialty-image">
                             <div class="hero-gallery">
                                 <img src="/imagenes/Merengon.jpg" alt="Producto 1">
