se agregan imagenes

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         </div>
                     </div>
 
-                    <div class="specialty-item">
+                    <div class="specialty-card">
                         <div class="specialty-image">
                             <div class="hero-gallery">
                                 <img src="/imagenes/Oblea.jpg" alt="Producto 2">
@@ -404,7 +404,7 @@
                 </div>
 
                 <div class="contact-container">
-                    <div class="contact-info">
+                    <div class="specialty-card">
                         <div class="contact-item">
                             <div class="contact-icon">📍</div>
                             <div class="contact-details">
