se corrige descripciones

--- a/index.html
+++ b/index.html
@@ -132,17 +132,17 @@
                     </div>
                     <div class="specialty-card">
                         <div class="hero-gallery">
-                            <img src="/imagenes/AromaticaHiervas.jpg" alt="Producto 2">
+                            <img src="/imagenes/AromaticaAmarillos.jpg" alt="Producto 2">
                         </div>
-                        <h4>🍫 Chocolate Caliente</h4>
-                        <p>Cremoso chocolate caliente preparado con cacao puro y amor.</p>
+                        <h4>Aromatica de papayuela</h4>
+                        <p>Deliciosa aromatica hecha con papayuela.</p>
                     </div>
                     <div class="specialty-card">
                         <div class="hero-gallery">
-                            <img src="/imagenes/AromaticaAmarillos.jpg" alt="Producto 2">
+                            <img src="/imagenes/AromaticaHiervas.jpg" alt="Producto 2">
                         </div>
-                        <h4>🥤 Bebidas Artesanales</h4>
-                        <p>Jugos naturales y bebidas refrescantes preparadas al momento.</p>
+                        <h4>Aromatica de hiervas</h4>
+                        <p>Deliciosa aromatica hechas con hiervabuena.</p>
                     </div>
                 </div>
             </section>
@@ -324,7 +324,7 @@
                 </div>
             </section>
 
-            
+
 
             <!-- Sección Nosotros -->
             <section id="nosotros" class="section">
@@ -354,18 +354,25 @@
                     <div class="mission">
                         <div class="mv-icon">🎯</div>
                         <h3>Nuestra Misión</h3>
-                        <p>Deleitar a nuestros clientes con productos de alta calidad elaborados con ingredientes
+                        <button class="toggle-btn" onclick="toggleText('mission-text')">Mostrar Misión</button>
+                        <p id="mission-text" class="content-text">
+                            Deleitar a nuestros clientes con productos de alta calidad elaborados con ingredientes
                             frescos y recetas tradicionales, brindando una experiencia única que supere sus
                             expectativas, fortaleciendo los momentos especiales y creando recuerdos memorables en cada
-                            visita.</p>
+                            visita.
+                        </p>
                     </div>
+
                     <div class="vision">
                         <div class="mv-icon">👁️</div>
                         <h3>Nuestra Visión</h3>
-                        <p>Ser la cafetería líder en la región, reconocida por la excelencia de nuestros productos, la
+                        <button class="toggle-btn" onclick="toggleText('vision-text')">Mostrar Visión</button>
+                        <p id="vision-text" class="content-text">
+                            Ser la cafetería líder en la región, reconocida por la excelencia de nuestros productos, la
                             calidad de nuestro servicio y la calidez de nuestro ambiente. Expandir nuestra oferta con
                             postres y bebidas innovadoras, manteniendo siempre la esencia y sabor únicos que nos
-                            distinguen.</p>
+                            distinguen.
+                        </p>
                     </div>
                 </div>
 
